added better division of notebook

--- a/Project2A.ipynb
+++ b/Project2A.ipynb
@@ -1735,7 +1735,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling"
+    "# Problem 2 (1 is the KML files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling"
    ]
   },
   {
@@ -3083,7 +3090,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting"
+    "## Plotting"
    ]
   },
   {
@@ -3383,6 +3390,13 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem 3 "
    ]
   }
  ],
